<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Dashboard">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/gambar"
        android:src="@drawable/splashscreen2"
        tools:ignore="ContentDescription" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gambar"
        android:id="@+id/btn_baca"
        android:text="@string/baca_renungan"
        android:fontFamily="@font/montheavy"
        android:textColor="@color/white"
        android:backgroundTint="@color/maroon"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_yt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_baca"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/tonton_video"
        android:fontFamily="@font/montheavy"
        android:textColor="@color/black"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_nytb"
        android:layout_below="@id/btn_yt"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/nytb"
        android:fontFamily="@font/montheavy"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_galeri"
        android:layout_below="@id/btn_nytb"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/galeri_kalvari"
        android:fontFamily="@font/montheavy"
        android:textColor="@color/white"
        android:backgroundTint="@color/birupeteng"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_galeri"
        android:id="@+id/btn_out"
        android:text="@string/keluar"
        android:fontFamily="@font/montheavy"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>