<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yakin_mau_keluar"
            android:fontFamily="@font/montheavy"
            android:textColor="@color/black"
            android:layout_margin="20dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no"
            android:text="@string/tidak"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:backgroundTint="#FF0000"
            android:layout_marginBottom="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yes"
            android:textColor="@color/white"
            android:backgroundTint="#1AE30B"
            android:layout_toEndOf="@id/no"
            android:layout_marginStart="80dp"
            android:text="@string/ya"/>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>