<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailRenungan">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maroon">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tgl_renungan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tanggal_renungan"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@id/tbdt">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">


    <TextView
        android:id="@+id/title_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/montheavy"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ayat"
        android:text="@string/ayat"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_below="@id/title_detail"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/black"/>



    <TextView
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ayat"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="18sp"/>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>