<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HariIniFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/title"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montheavy"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ayat_today"
                android:layout_below="@id/title"
                android:backgroundTint="@color/black"
                android:text="@string/ayat"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:fontFamily="@font/montheavy"
                android:layout_marginStart="28dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/content_today"
                android:layout_below="@id/ayat_today"
                android:text="@string/content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="56dp"/>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>